﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2019-10-12
	Fixed: NullReferenceException in the crash handler (reported by Chairkicker Nick)
### 2019-10-10
	Added: Session start and session end power boosting. Disabled by default. (requested by Chairkicker Nick)
### 2019-10-09
	Fixed: 2 potential errors when closing down.
### 2019-09-25
	Fixed: Process debug overrode some basic output, turning them all into debug messages. Messages that normally would appear are no longer labeled as debug.
### 2019-09-23
	Fixed: Watchlist warning option was causing it to trigger excessively.
### 2019-09-18
	Fixed: Null reference when default audio device is lost.
	Changed: Sorting of loaders. Now ignores ignored items.
	Added: Exclusive mode can be enabled in the UI for watchlist rules.
### 2019-09-12
	Changed: Don't log a useless error regarding process exit.
### 2019-09-11
	Added: Warn option to watchlist rules so they appear as warnings in the log instead. Personal use case is logging things running from temp with parent also logged.
### 2019-08-25
	Fixed: Process debug was not showing as much as it should've in exit wait list.
	Internal: Improvements to loader display.
### 2019-08-23
	Changed: Foreground hang detection. Apparent false positives are being detected for unknown reason, hopefully this fixes that. Effectiviness unconfirmed.
	Changed: Use PInvoke for hang detection instead of native due to significantly better performance.
### 2019-08-21
	Fixed: ArgumentNullException when saving a watchlist rule caused by update done on 2019-08-18.
### 2019-08-19
	Added: Legacy workaround setting is now saved if it's changed. UI configuration still missing.
	Fixed: Affinity limit mode now properly moves cores besides limiting them, avoiding reduction in number of cores when not necessary.
### 2019-08-18